Updated Content on homepage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- Favicon and touch icons -->
-        <!--
+        <!-- Old Favicon Stuff
 		<link rel="shortcut icon" href="assets/ico/favicon.png">
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
@@ -89,23 +89,19 @@
                         <li>
                             <img src="assets/img/slider/3.jpg">
                             <div class="flex-caption">
-                            	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit 
-                            	lobortis nisl ut aliquip ex ea commodo consequat.
+                            	Code Like a Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                         <li>
                             <img src="assets/img/slider/2.jpg">
                             <div class="flex-caption">
-                            	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit 
-                            	lobortis nisl ut aliquip ex ea commodo consequat.
+                            	Code Like a Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                         <li>
                             <img src="assets/img/slider/1.jpg">
                             <div class="flex-caption">
-                            	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-                            	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-                            	Lorem ipsum dolor sit amet, consectetur.
+                            	Code Like a Girl is an initiative created to encourage girls to code!
                             </div>
                         </li>
                     </ul>
@@ -128,7 +124,7 @@
         </div>
 
         <!-- Services -->
-        <div class="services-container">
+        <!--<div class="services-container">
 	        <div class="container">
 	            <div class="row">
 	            	<div class="col-sm-3">
@@ -165,22 +161,22 @@
 	                </div>
 	            </div>
 	        </div>
-        </div>
+        </div>-->
 
         <!-- Latest work -->
         <div class="work-container">
 	        <div class="container">
 	        	<div class="row">
 		            <div class="col-sm-12 work-title wow fadeIn">
-		                <h2>Our Latest Work</h2>
+		                <h2>Our Workhops</h2>
 		            </div>
 	            </div>
 	            <div class="row">
 	            	<div class="col-sm-3">
 		                <div class="work wow fadeInUp">
 		                    <img src="assets/img/portfolio/work1.jpg" alt="Lorem Website" data-at2x="assets/img/portfolio/work1.jpg">
-		                    <h3>Lorem Website</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>Great Expectations 2017</h3>
+		                    <p>We will be hosting Code Like a Girl sessions during the Great Expectations program at Fairview Elementary School</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work1.jpg"><span class="icon_search"></span></a>
 		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
@@ -190,8 +186,8 @@
 	                <div class="col-sm-3">
 		                <div class="work wow fadeInDown">
 		                    <img src="assets/img/portfolio/work2.jpg" alt="Ipsum Logo" data-at2x="assets/img/portfolio/work2.jpg">
-		                    <h3>Ipsum Logo</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>TBA</h3>
+		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work2.jpg"><span class="icon_search"></span></a>
 		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
@@ -201,8 +197,8 @@
 		            <div class="col-sm-3">
 		                <div class="work wow fadeInUp">
 		                    <img src="assets/img/portfolio/work3.jpg" alt="Dolor Prints" data-at2x="assets/img/portfolio/work3.jpg">
-		                    <h3>Dolor Prints</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>TBA</h3>
+		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work3.jpg"><span class="icon_search"></span></a>
 		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
@@ -212,8 +208,8 @@
 		            <div class="col-sm-3">
 		                <div class="work wow fadeInDown">
 		                    <img src="assets/img/portfolio/work4.jpg" alt="Sit Amet Website" data-at2x="assets/img/portfolio/work4.jpg">
-		                    <h3>Sit Amet Website</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>TBA</h3>
+		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work4.jpg"><span class="icon_search"></span></a>
 		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
@@ -243,10 +239,9 @@
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
-		                                	"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-		                                	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-		                                	Lorem ipsum dolor sit amet, consectetur..."<br>
-		                                	<a href="#">Lorem Ipsum, dolor.co.uk</a>
+		                                	"Code Like a Girl is something I wish I had when I was younger. I never wanted to take coding classes with all the boys back then, they all had cooties!
+											Obviously now that I'm older it's different, but I know for sure that younger me would have really appreciated this program."<br>
+		                                	<a href="http://shania.khatri.io">Shania Khatri, Founder of Code Like a Girl</a>
 		                                </p>
 	                                </div>
 	                			</div>
