Updated header & resized images, also fixed logo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 		-->
 		
+		<!--New Favicon Stuff-->
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/ico/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="/assets/ico/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/assets/ico/favicon-16x16.png" sizes="16x16">
@@ -68,7 +69,7 @@
 							<a href="index.html"><span aria-hidden="true" class="icon_house"></span><br>Home</a>
 						</li>
 						<li>
-							<a href="services.html"><span aria-hidden="true" class="icon_tools"></span><br>Workshops</a>
+							<a href="workshops.html"><span aria-hidden="true" class="icon_tools"></span><br>Workshops</a>
 						</li>
 						<li>
 							<a href="about.html"><span aria-hidden="true" class="icon_profile"></span><br>About</a>
@@ -235,7 +236,7 @@
 	                		<div class="tab-content">
 	                			<div role="tabpanel" class="tab-pane fade in active" id="tab1">
 	                				<div class="testimonial-image">
-	                					<img src="assets/img/testimonials/1.jpg" alt="" data-at2x="assets/img/testimonials/1.jpg">
+	                					<img src="assets/img/testimonials/shania.png" alt="" data-at2x="assets/img/testimonials/shania.png">
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
