--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Gioia - Bootstrap Business Template</title>
+		<title>Code Like a Girl</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400">
@@ -19,25 +19,28 @@
         <link rel="stylesheet" href="assets/css/form-elements.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/media-queries.css">
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <!-- Favicon and touch icons -->
-        <link rel="shortcut icon" href="assets/ico/favicon.png">
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+		<!--New Favicon Stuff-->
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/ico/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="/assets/ico/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/assets/ico/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="/assets/ico/manifest.json">
+		<link rel="mask-icon" href="/assets/ico/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="/assets/ico/favicon.ico">
+		<meta name="msapplication-config" content="/assets/ico/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 
     </head>
 
     <body>
-
+        
         <!-- Top menu -->
 		<nav class="navbar" role="navigation">
 			<div class="container">
@@ -48,7 +51,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">Gioia - Bootstrap Business Template</a>
+					<a class="navbar-brand" href="index.html">Code Like a Girl</a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -57,25 +60,19 @@
 							<a href="index.html"><span aria-hidden="true" class="icon_house"></span><br>Home</a>
 						</li>
 						<li>
-							<a href="portfolio.html"><span aria-hidden="true" class="icon_camera"></span><br>Portfolio</a>
-						</li>
-						<li>
-							<a href="#"><span aria-hidden="true" class="icon_comment"></span><br>Blog</a>
-						</li>
-						<li>
-							<a href="services.html"><span aria-hidden="true" class="icon_tools"></span><br>Services</a>
+							<a href="workshops.html"><span aria-hidden="true" class="icon_tools"></span><br>Workshops</a>
 						</li>
 						<li class="active">
 							<a href="about.html"><span aria-hidden="true" class="icon_profile"></span><br>About</a>
 						</li>
 						<li>
-							<a href="contact.html"><span aria-hidden="true" class="icon_mail"></span><br>Contact</a>
+							<a href="contact.html"><span aria-hidden="true" class="icon_mail"></span><br>Contact Us</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-
+     
         <!-- Page Title -->
         <div class="page-title-container">
             <div class="container">
