--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1 page-title wow fadeIn">
                         <span aria-hidden="true" class="icon_profile"></span>
-                        <h1>About Us /</h1>
-                        <p>Below you can find more information about our company</p>
+                        <h1>About Code Like a Girl</h1>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -91,33 +91,14 @@
         	<div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 about-us-text wow fadeInLeft">
-	                    <h3>About Gioia</h3>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> 
-	                    	nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, 
-	                    	sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
-	                    	suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-	                    	sed do <strong>eiusmod tempor</strong> incididunt.
-	                    </p>
 	                    <h3>Our Mission</h3>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, <span class="colored-text">consectetur adipisicing</span> elit, sed do eiusmod tempor incididunt 
-	                    	ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip 
-	                    	ex ea commodo consequat. Lorem ipsum dolor sit amet, <strong>consectetur adipisicing</strong> elit, sed do eiusmod 
-	                    	<span class="colored-text">tempor incididunt</span> ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation 
-	                    	ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur 
-	                    	adipisicing elit, sed do eiusmod tempor incididunt.
-	                    </p>
-	                    <h3>Why Choose Us</h3>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, <strong>consectetur adipisicing elit</strong>, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo 
-	                    	consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis <span class="colored-text">nostrud exerci</span> tation ullamcorper suscipit lobortis 
-	                    	nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
-	                    	tempor incididunt.
-	                    </p>
+	                    	The mission of Code Like a Girl is to create an environment conducive to the teaching of 
+				technology education to girls and to combat the negative effects of stereotyping that oftentimes preclude 
+				girls from seeking an education in technology oriented fields like computer science and engineering. 
+				To this end, the organization Code Like a Girl was founded to host classes and workshops that aim to create places 
+				where girls can meet like-minded peers and explore their interests in STEM fields.
+				</p>
 	                </div>
 	            </div>
 	        </div>
@@ -134,12 +115,11 @@
 	            <div class="row">	            	
 	            	<div class="col-sm-3">
 		                <div class="team-box wow fadeInUp">
-		                    <img src="assets/img/team/1.jpg" alt="" data-at2x="assets/img/team/1.jpg">
-		                    <h3>John Doe</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <img src="assets/img/team/1.jpg" alt="" data-at2x="assets/img/team/shania.png">
+		                    <h3>Shania Khatri</h3>
+		                    <p>Shania Khatri is an avid programmer and advocate of STEM education. She is the founder of Code Like a Girl and is committed creating opportunities for like-minded girls to meet and explore their interests in the STEM fields.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
-		                        <a class="big-link-2" href="#"><span class="social_twitter"></span></a>
 		                        <a class="big-link-2" href="#"><span class="social_linkedin"></span></a>
 		                        <a class="big-link-2" href="#"><span class="icon_mail"></span></a>
 		                    </div>
@@ -148,12 +128,11 @@
 	                <div class="col-sm-3">
 		                <div class="team-box wow fadeInDown">
 		                    <img src="assets/img/team/2.jpg" alt="" data-at2x="assets/img/team/2.jpg">
-		                    <h3>Jane Doe</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>Bliss Uribe</h3>
+		                    <p>Bliss Uribe will be studying Biomedical Engineering at Case Western Reserve University in the Fall of 2017. She is also an avid programmer, STEM education advocate, and enjoys swimming in her free time.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
-		                        <a class="big-link-2" href="#"><span class="social_twitter"></span></a>
-		                        <a class="big-link-2" href="#"><span class="social_dribbble"></span></a>
+					<a class="big-link-2" href="#"><span class="social_twitter"></span></a>
 		                        <a class="big-link-2" href="#"><span class="icon_mail"></span></a>
 		                    </div>
 		                </div>
@@ -161,8 +140,8 @@
 	                <div class="col-sm-3">
 		                <div class="team-box wow fadeInUp">
 		                    <img src="assets/img/team/3.jpg" alt="" data-at2x="assets/img/team/3.jpg">
-		                    <h3>Tim Brown</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>Toby Lazear</h3>
+		                    <p>Toby Lazear is a Junior at Fox Chapel Area High School who is interested in technology and engineering. She enjoys golf in her free time.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
 		                        <a class="big-link-2" href="#"><span class="social_twitter"></span></a>
@@ -173,8 +152,8 @@
 	                <div class="col-sm-3">
 		                <div class="team-box wow fadeInDown">
 		                    <img src="assets/img/team/4.jpg" alt="" data-at2x="assets/img/team/4.jpg">
-		                    <h3>Sarah Red</h3>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor...</p>
+		                    <h3>Claudia Simon</h3>
+		                    <p>Claudia Simon is a Junior at Fox Chapel Area High School who is interested in technology and engineering.</p>
 		                    <div class="team-social">		                        
 		                        <a class="big-link-2" href="#"><span class="social_facebook"></span></a>
 		                        <a class="big-link-2" href="#"><span class="social_twitter"></span></a>
