Updated Workshops page & footer.

--- a/contact.html
+++ b/contact.html
@@ -131,17 +131,16 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-3 footer-box wow fadeInUp">
+                    <div class="col-sm-4 footer-box wow fadeInUp">
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
                     </div>
-                    <div class="col-sm-3 footer-box wow fadeInDown">
+                    <div class="col-sm-4 footer-box wow fadeInDown">
                         <h4>Email Updates</h4>
                         <div class="footer-box-text footer-box-text-subscribe">
                         	<p>Enter your email and you'll be one of the first to get new updates:</p>
@@ -156,17 +155,15 @@
 		                    <p class="error-message"></p>
                         </div>
                     </div>
-                    <div class="col-sm-3 footer-box wow fadeInUp">
+                    <!--<div class="col-sm-3 footer-box wow fadeInUp">
                         <h4>Flickr Photos</h4>
                         <div class="footer-box-text flickr-feed"></div>
-                    </div>
-                    <div class="col-sm-3 footer-box wow fadeInDown">
+                    </div>-->
+                    <div class="col-sm-4 footer-box wow fadeInDown">
                         <h4>Contact Us</h4>
                         <div class="footer-box-text footer-box-text-contact">
-	                        <p><span aria-hidden="true" class="icon_pin"></span> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 0039 333 12 68 347</p>
-	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Gioia_Business</p>
-	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@gioia.com</a></p>
+	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 412-818-1219</p>
+	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="mailto:codelikeagirl@outlook.com">codelikeagirl@outlook.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -177,14 +174,14 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-7 footer-copyright wow fadeIn">
-                        <p>&copy; Gioia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>&copy; Shania Khatri 2017</p>
                     </div>
-                    <div class="col-sm-5 footer-social wow fadeIn">
+                    <!--<div class="col-sm-5 footer-social wow fadeIn">
                         <a href="#"><span class="social_facebook"></span></a>
                         <a href="#"><span class="social_dribbble"></span></a>
                         <a href="#"><span class="social_twitter"></span></a>
                         <a href="#"><span class="social_pinterest"></span></a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </footer>
