--- a/workshops.html
+++ b/workshops.html
@@ -79,8 +79,8 @@
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1 page-title wow fadeIn">
                         <span aria-hidden="true" class="icon_tools"></span>
-                        <h1>Services /</h1>
-                        <p>Here are the services we offer</p>
+                        <h1>Our workshops</h1>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -91,14 +91,10 @@
         	<div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 services-full-width-text wow fadeInLeft">
-	                    <h3>Lorem Ipsum Dolor Sit Amet</h3>
+	                    <h3>A brief description of our workshops</h3>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> 
-	                    	nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, 
-	                    	sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
-	                    	suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-	                    	sed do <strong>eiusmod tempor</strong> incididunt.
+	                    	Introduce your girls to the exciting world of code!
+The goal of Code Like a Girl is to  introduce girls to the fundamental structure of programming. This course will utilize <a href="http://scratch.mit.edu" class="colored-text">Scratch</a>, a program developed for kids, and facilitated by a group of experienced high school students hoping to inspire young girls to pursue STEM topics in the future. Participants will gain a basic understanding of the definition of programming, how to use Scratch, loops, if-then conditionals, and variables.
 	                	</p>
 	                </div>
 	            </div>
@@ -106,7 +102,7 @@
         </div>
 
         <!-- Services -->
-        <div class="services-container">
+        <!--<div class="services-container">
 	        <div class="container">
 	            <div class="row">
 	            	<div class="col-sm-3">
@@ -143,32 +139,24 @@
 	                </div>
 	            </div>
 	        </div>
-        </div>
+        </div>-->
 
         <!-- Services Half Width Text -->
         <div class="services-half-width-container">
         	<div class="container">
 	            <div class="row">
 	                <div class="col-sm-6 services-half-width-text wow fadeInLeft">
-	                    <h3>Lorem Ipsum</h3>
+	                    <h3>Great Expectations at Fairview Elementary School</h3>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> 
-	                    	nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, 
-	                    	sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
-	                    	suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-	                    	sed do <strong>eiusmod tempor</strong> incididunt.
+	                    	Great Expectations is a five week, after-school program held at Fairview Elementary, starting shortly after the winter break.
+							The program is operated by the FPTO and Parent volunteers, along with the much appreciated assistance and effort from the Fairview teachers, students, custodial staff, secretaries, Principal, and GE instructors.
+							The first Code Like a Girl workshop will be offered during Great Expectations 2017. For more information please visit the FPTO website <a href="http://www.fpto.net/GE">here</a>.
 	                    </p>
 	                </div>
 	                <div class="col-sm-6 services-half-width-text wow fadeInUp">
-	                    <h3>Dolor Sit Amet</h3>
+	                    <h3>Cooper Siegel Community Library</h3>
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <span class="colored-text">suscipit lobortis</span> 
-	                    	nisl ut aliquip ex ea commodo consequat. Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit, 
-	                    	sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper 
-	                    	suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-	                    	sed do <strong>eiusmod tempor</strong> incididunt.
+	                    	Our workshop at the Cooper Siegel Community Library is coming soon. If you'd like more information, please subscribe to our mailing list.
 	                    </p>
 	                </div>
 	            </div>
@@ -176,7 +164,7 @@
         </div>
 
         <!-- Call To Action -->
-        <div class="call-to-action-container">
+        <!--<div class="call-to-action-container">
         	<div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 call-to-action-text wow fadeInLeftBig">
@@ -190,23 +178,22 @@
 	                </div>
 	            </div>
 	        </div>
-        </div>
+        </div>-->
 
         <!-- Footer -->
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-3 footer-box wow fadeInUp">
+                    <div class="col-sm-4 footer-box wow fadeInUp">
                         <h4>About Us</h4>
                         <div class="footer-box-text">
 	                        <p>
-	                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                        	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+	                        	The mission of Code Like a Girl is to create an environment conducive to the teaching of technology education to girls.
 	                        </p>
 	                        <p><a href="about.html">Read more...</a></p>
                         </div>
                     </div>
-                    <div class="col-sm-3 footer-box wow fadeInDown">
+                    <div class="col-sm-4 footer-box wow fadeInDown">
                         <h4>Email Updates</h4>
                         <div class="footer-box-text footer-box-text-subscribe">
                         	<p>Enter your email and you'll be one of the first to get new updates:</p>
@@ -221,17 +208,15 @@
 		                    <p class="error-message"></p>
                         </div>
                     </div>
-                    <div class="col-sm-3 footer-box wow fadeInUp">
+                    <!--<div class="col-sm-3 footer-box wow fadeInUp">
                         <h4>Flickr Photos</h4>
                         <div class="footer-box-text flickr-feed"></div>
-                    </div>
-                    <div class="col-sm-3 footer-box wow fadeInDown">
+                    </div>-->
+                    <div class="col-sm-4 footer-box wow fadeInDown">
                         <h4>Contact Us</h4>
                         <div class="footer-box-text footer-box-text-contact">
-	                        <p><span aria-hidden="true" class="icon_pin"></span> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 0039 333 12 68 347</p>
-	                        <p><span aria-hidden="true" class="icon_profile"></span> Skype: Gioia_Business</p>
-	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="#">contact@gioia.com</a></p>
+	                        <p><span aria-hidden="true" class="icon_phone"></span> Phone: 412-818-1219</p>
+	                        <p><span aria-hidden="true" class="icon_mail"></span> Email: <a href="mailto:codelikeagirl@outlook.com">codelikeagirl@outlook.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -242,14 +227,14 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-7 footer-copyright wow fadeIn">
-                        <p>&copy; Gioia - All rights reserved. Template by <a href="http://azmind.com">Azmind</a>.</p>
+                        <p>&copy; Shania Khatri 2017</p>
                     </div>
-                    <div class="col-sm-5 footer-social wow fadeIn">
+                    <!--<div class="col-sm-5 footer-social wow fadeIn">
                         <a href="#"><span class="social_facebook"></span></a>
                         <a href="#"><span class="social_dribbble"></span></a>
                         <a href="#"><span class="social_twitter"></span></a>
                         <a href="#"><span class="social_pinterest"></span></a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </footer>
