--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 	            <div class="row">	            	
 	            	<div class="col-sm-3">
 		                <div class="team-box wow fadeInUp">
-		                    <img src="assets/img/team/1.jpg" alt="" data-at2x="assets/img/team/shania.png">
+		                    <img src="assets/img/team/shania.PNG" alt="" data-at2x="assets/img/team/shania.PNG">
 		                    <h3>Shania Khatri</h3>
 		                    <p>Shania Khatri is an avid programmer and advocate of STEM education. She is the founder of Code Like a Girl and is committed creating opportunities for like-minded girls to meet and explore their interests in the STEM fields.</p>
 		                    <div class="team-social">		                        
@@ -127,7 +127,7 @@
 	                </div>
 	                <div class="col-sm-3">
 		                <div class="team-box wow fadeInDown">
-		                    <img src="assets/img/team/2.jpg" alt="" data-at2x="assets/img/team/2.jpg">
+		                    <img src="assets/img/team/bliss.PNG" alt="" data-at2x="assets/img/team/bliss.PNG">
 		                    <h3>Bliss Uribe</h3>
 		                    <p>Bliss Uribe will be studying Biomedical Engineering at Case Western Reserve University in the Fall of 2017. She is also an avid programmer, STEM education advocate, and enjoys swimming in her free time.</p>
 		                    <div class="team-social">		                        
@@ -180,7 +180,7 @@
 	                		<div class="tab-content">
 	                			<div role="tabpanel" class="tab-pane fade in active" id="tab1">
 	                				<div class="testimonial-image">
-	                					<img src="assets/img/testimonials/shania.png" alt="" data-at2x="assets/img/testimonials/shania.png">
+	                					<img src="assets/img/testimonials/shania.PNG" alt="" data-at2x="assets/img/testimonials/shania.PNG">
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
