--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 		                    <p>We will be hosting Code Like a Girl sessions during the Great Expectations program at Fairview Elementary School</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work1.jpg"><span class="icon_search"></span></a>
-		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
+		                        <a class="big-link-2" href="workshops.html"><span class="icon_link"></span></a>
 		                    </div>
 		                </div>
 	                </div>
@@ -191,7 +191,7 @@
 		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work2.jpg"><span class="icon_search"></span></a>
-		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
+		                        <a class="big-link-2" href="workshops.html"><span class="icon_link"></span></a>
 		                    </div>
 		                </div>
 		            </div>
@@ -202,7 +202,7 @@
 		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work3.jpg"><span class="icon_search"></span></a>
-		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
+		                        <a class="big-link-2" href="workshops.html"><span class="icon_link"></span></a>
 		                    </div>
 		                </div>
 		            </div>
@@ -213,7 +213,7 @@
 		                    <p>We're working on coordinating more sessions soon! Sign up for our mailing list to recieve updates.</p>
 		                    <div class="work-bottom">
 		                        <a class="big-link-2 view-work" href="assets/img/portfolio/work4.jpg"><span class="icon_search"></span></a>
-		                        <a class="big-link-2" href="portfolio.html"><span class="icon_link"></span></a>
+		                        <a class="big-link-2" href="workshops.html"><span class="icon_link"></span></a>
 		                    </div>
 		                </div>
 		            </div>
@@ -236,7 +236,7 @@
 	                		<div class="tab-content">
 	                			<div role="tabpanel" class="tab-pane fade in active" id="tab1">
 	                				<div class="testimonial-image">
-	                					<img src="assets/img/testimonials/shania.png" alt="" data-at2x="assets/img/testimonials/shania.png">
+	                					<img src="assets/img/testimonials/shania.PNG" alt="" data-at2x="assets/img/testimonials/shania.PNG">
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
