--- a/contact.html
+++ b/contact.html
@@ -79,8 +79,8 @@
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1 page-title wow fadeIn">
                         <span aria-hidden="true" class="icon_mail"></span>
-                        <h1>Contact Us /</h1>
-                        <p>Here is how you can contact us</p>
+                        <h1>Contact Us</h1>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -92,9 +92,7 @@
 	            <div class="row">
 	                <div class="col-sm-7 contact-form wow fadeInLeft">
 	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. 
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper <a href="">suscipit lobortis</a> 
-	                    	nisl ut aliquip ex ea commodo consequat.
+	                    	The best way to reach us is via email, but if it's urgent feel free to give us a call. You can stay up to date with our latest news by signing up for our mailing list.
 	                    </p>
 	                    <form role="form" action="assets/contact.php" method="post">
 	                    	<div class="form-group">
@@ -119,9 +117,9 @@
 	                <div class="col-sm-5 contact-address wow fadeInUp">
 	                    <h3>We Are Here</h3>
 	                    <div class="map"></div>
-	                    <h3>Address</h3>
-	                    <p>Via Principe Amedeo 9 <br> 10100, Torino, TO, Italy</p>
-	                    <p>Phone: 0039 333 12 68 347</p>
+	                    <h3>Our location:</h3>
+	                    <p>Pittsburgh, Pennslyvania</p>
+	                    <p>Phone: 412-818-1219</p>
 	                </div>
 	            </div>
 	        </div>
@@ -196,7 +194,7 @@
         <script src="assets/flexslider/jquery.flexslider-min.js"></script>
         <script src="assets/js/jflickrfeed.min.js"></script>
         <script src="assets/js/masonry.pkgd.min.js"></script>
-        <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="http://maps.google.com/maps/api/js?key=AIzaSyCRbRwoamuP7Y2N-QZfwNBSHQWiz5qMjpc"></script>
         <script src="assets/js/jquery.ui.map.min.js"></script>
         <script src="assets/js/scripts.js"></script>
 
